--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mykeep.r3j3ct3d.mykeep">
+    package="com.Escanor.sambhav.mykeep">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -12,15 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.Escanor.sambhav.mykeep.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SolventViewHolders" />
-        <activity android:name=".NoteCreation.SimpleNoteCreation"></activity>
+        <activity android:name="com.Escanor.sambhav.mykeep.ViewHolders" />
+        <activity android:name="com.Escanor.sambhav.mykeep.NoteCreation.SimpleNoteCreation"></activity>
     </application>
 
 </manifest>
